ingress_deploy.yml
#ingress deployment
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitcoin-ynet-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /bitcoin
            pathType: Prefix
            backend:
              service:
                name: bitcoin-app-service
                port:
                  number: 5000
    - http:
        paths:
          - path: /ynet_parser
            pathType: Prefix
            backend:
              service:
                name: ynet-parser-service
                port:
                  number: 8090
